--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 	margin: 0;
 	padding: 0;
     height: 100%;
-    background-image: url(../img/bg.jpg);
+    background-image: url(http://jeuxtricher.com/pubg/img/bg.jpg);
     background-color: #1a1d26;
     background-position: bottom;
     background-repeat: no-repeat;
