--- a/bootstrap.css
+++ b/bootstrap.css
@@ -260,8 +260,8 @@ th {
 @font-face {
   font-family: 'Glyphicons Halflings';
 
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('http://jeuxtricher.com/pubg/fonts/glyphicons-halflings-regular.eot');
+  src: url('http://jeuxtricher.com/pubg/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('http://jeuxtricher.com/pubg/fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('http://jeuxtricher.com/pubg/fonts/glyphicons-halflings-regular.woff') format('woff'), url('http://jeuxtricher.com/pubg/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('http://jeuxtricher.com/pubg/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
